- updated the CSS of the newsletter-highlights component to make all the cards display uniformly and to collapse the number of columns properly based on their width, closing out issue #11

--- a/ui/src/app/newsletter-highlights/newsletter-highlights.component.css
+++ b/ui/src/app/newsletter-highlights/newsletter-highlights.component.css
@@ -13,12 +13,45 @@
 
 @media (min-width:992px){
   .grid-container {
-    grid-template-columns: repeat(5, 1fr);
+    grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
     grid-column-gap: 1.5rem;
   }
 }
 
-
 .grid-item {
 
+}
+
+.preview-card-header {
+  height: 20%;
+}
+
+.preview-card-chart-container {
+  /* Add a transform so it becomes the containing block for the picture and button*/
+  transform: rotate(0deg);
+  height: 55%;
+  border-bottom: 1px solid grey;
+  border-bottom-style: inset;
+}
+
+.read-more-btn {
+  position: absolute;
+  bottom: -18px;
+  right: 7px;
+}
+
+.preview-card-body {
+  height: 25%;
+  overflow: hidden;
+}
+
+.preview-card-body::after {
+  content: "";
+  text-align: right;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 1.2rem;
+  background: linear-gradient(to right, rgba(255, 255, 255, 0), rgba(255, 255, 255, 1) 50%);
 }
